test/runnable/constants.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	r my-record = "a", "b"
	r foo
	out print r.a
	out print r.b
	()

my-record record
	a string
	b string

foo void(r my-record) summon
	out print r.a
	out print r.b
